--- a/style.css
+++ b/style.css
@@ -114,16 +114,49 @@ body, nav, main {
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   }
   
+  /* Modal (imagem ampliada) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.9);
+}
+
+.modal-conteudo {
+  margin: auto;
+  display: block;
+  max-width: 90%;
+  max-height: 80vh;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #fff;
+}
+
+.fechar {
+  position: absolute;
+  top: 30px;
+  right: 50px;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 
 /* Portfolio */
 
 #portfolio {
-    background-color: #e49ae9;
+    background-color: #eb03eb;
     padding: 30px 80px;
 }
 
 .titulo_portfolio {
-    color: #98039b;
+    color: #040304;
     font-size: 30px;
 }
 
@@ -139,11 +172,74 @@ body, nav, main {
 }
 
 .info_portfolio h3 {
-    color: #f3a0e3;
+    color: #e026bb;
     font-size: 18px;
 }
 
 #contato {
+  padding: 40px 80px;
+  background-color: #fff;
+  text-align: center;
+}
+
+#contato h2 {
+  font-size: 28px;
+  color: #e4dbf8;
+  margin-bottom: 30px;
+  font-weight: bold;
+}
+
+.formulario {
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.input-group {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.campo {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.campo label {
+  margin-bottom: 6px;
+  font-weight: 500;
+}
+
+input,
+textarea {
+  padding: 12px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  resize: none;
+  outline: none;
+}
+
+button[type="submit"] {
+  width: 100%;
+  padding: 15px;
+  background-color: #928af7;
+  color: white;
+  border: none;
+  border-radius: 12px;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+button[type="submit"]:hover {
+  background-color: #7b74e2;
+}
+
+
+#contatos {
     background-color: #ab93f0;
     padding: 38px;
     color: rgb(116, 9, 155);
